server.log

> rest-express@1.0.0 dev
> NODE_ENV=development tsx server/index.ts

undefined:1
undefined
^

SyntaxError: "undefined" is not valid JSON
    at JSON.parse (<anonymous>)
    at <anonymous> (/Users/codenolimits-dreamai-nanach/BRESLEV-TORAH-ONLINE/server/routes/tts.ts:6:21)
    at ModuleJob.run (node:internal/modules/esm/module_job:234:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:473:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:122:5)

Node.js v20.18.3
